--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <h1 class="logo"><a href="index.html">Darpan</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/darpan-logo.jpg" alt="logo" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/clients/client-1.png" alt="logo" class="img-fluid"></a> -->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -139,8 +139,8 @@
               We are a group of enthusiastic people who believes that hindi should get it's pride back.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
+              <li><i class="ri-check-double-line"></i>We are working for a cause.</li>
+              <li><i class="ri-check-double-line"></i>We are shaping New India.</li>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
             </ul>
           </div>
