--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>MG Steet NIT-Durgapur West Bengal</p>
+                <p>MG Avenue NIT-Durgapur West Bengal</p>
               </div>
 
               <div class="email">
@@ -1341,7 +1341,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Darpan</h3>
             <p>
-              MS Street NIT Campus<br>
+              MS Avenue NIT Campus<br>
               Durgapur West Bengal<br>
               India<br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
@@ -1351,7 +1351,7 @@
 
           <div class="col-lg-2 col-md-6 footer-links">
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li> -->
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Events</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Gallary</a></li>
@@ -1361,9 +1361,9 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <!-- <h4>Our Services</h4>
+            <!-- <h4>Our domains</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Content Writing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
@@ -1394,11 +1394,11 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/darpannitd" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/darpan.nitdgp/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/darpan_nitdgp/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/@darpan-nitdurgapur1089" class="google-plus" target="_blank"><i class="bx bxl-youtube"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin" target="_blank"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
