--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     </section> -->
     <!-- End Cta Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= Final Year Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -369,7 +369,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Rahul Kumar shaw</h4>
                 <span>Presedent</span>
               </div>
             </div>
@@ -387,7 +387,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Adarsh Pandey</h4>
                 <span>Vice-Presedent</span>
               </div>
             </div>
@@ -405,7 +405,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Sandeep Kumar Vaishya</h4>
                 <span>Vice-presedent</span>
               </div>
             </div>
@@ -423,7 +423,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
+                <h4>Avishek Shaw</h4>
                 <span>General Secretery</span>
               </div>
             </div>
@@ -447,8 +447,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Anand Nagar</h4>
+                <span>Tresurer</span>
               </div>
             </div>
           </div>
@@ -465,8 +465,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Tresurer</span>
+                <h4>Rishabh Yadav</h4>
+                <span>Associate General Secretery</span>
               </div>
             </div>
           </div>
@@ -483,7 +483,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Ankit Jaiswal</h4>
                 <span>Convenor</span>
               </div>
             </div>
@@ -501,8 +501,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Amit</h4>
+                <span>Creative Head</span>
               </div>
             </div>
           </div>
@@ -525,8 +525,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Sachin</h4>
+                <span>Tech Head</span>
               </div>
             </div>
           </div>
@@ -543,8 +543,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Shubham Raj</h4>
+                <span>Event And Sponsorship Head</span>
               </div>
             </div>
           </div>
@@ -554,7 +554,7 @@
       </div>
     </section><!-- End Team Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= 3rd year Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -577,8 +577,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Harsh Shrivastav</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -595,8 +595,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Shivendra Singh</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -613,8 +613,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Abhishek Shingh Silawat</h4>
+                <!-- <span>CTO</span> -->
               </div>
             </div>
           </div>
@@ -631,8 +631,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Garima singh</h4>
+                <!-- <span>Accountant</span> -->
               </div>
             </div>
           </div>
@@ -655,8 +655,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Ashlesha Upadhyay</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -673,8 +673,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Nikita Kumari</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -691,8 +691,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Mayank Mani Tripathi</h4>
+                <!-- <span>CTO</span> -->
               </div>
             </div>
           </div>
@@ -709,8 +709,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Sandeep Jaiswal</h4>
+                <!-- <span>Accountant</span> -->
               </div>
             </div>
           </div>
@@ -733,8 +733,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Adarsh</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -751,8 +751,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Ankit Kumar Verma</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -762,7 +762,7 @@
       </div>
     </section><!-- End Team Section -->
 
-     <!-- ======= Team Section ======= -->
+     <!-- ======= 2nd rear Team Section ======= -->
      <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -779,14 +779,14 @@
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100078717529096"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/p.m._01/"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Prince Maurya</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -796,15 +796,15 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://twitter.com/i_mohit_1610"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/mohit.aryaa.1"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/i_m0hit_/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/mohit-kumar-1678541b7/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Mohit kumar</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -821,8 +821,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Nikhil Singh</h4>
+                <!-- <span>CTO</span> -->
               </div>
             </div>
           </div>
@@ -839,8 +839,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Abhinav Baranwal</h4>
+                <!-- <span>Accountant</span> -->
               </div>
             </div>
           </div>
@@ -863,8 +863,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Sunidhi Mishra</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -881,8 +881,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Shashank Shekhar Tiwari</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -899,8 +899,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Bhura Ram</h4>
+                <!-- <span>CTO</span> -->
               </div>
             </div>
           </div>
@@ -917,15 +917,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Divyanshu Chaturvedi</h4>
+                <!-- <span>Accountant</span> -->
               </div>
             </div>
           </div>
 
         </div>
-
-
 
         <div class="row d-flex align-items-center justify-content-center">
 
@@ -941,8 +939,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Harsh Raj Singh</h4>
+                <!-- <span>Chief Executive Officer</span> -->
               </div>
             </div>
           </div>
@@ -959,8 +957,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Yuvraj</h4>
+                <!-- <span>Product Manager</span> -->
               </div>
             </div>
           </div>
@@ -1219,46 +1217,46 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Why Should I Join Darpan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Darpan Could help you in many aspects of life. we will provode you an healthy and constructive environment here. You will get the help from the senior members of Darpan.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">What makes Darpan diffferent from other clubs?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  Here in darpan we are working for a bigger cause and that statement is enought in itself.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Why should a person, not interested in writing or poetry should join Darpan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  Here in Darpan we are promotion Hindi and for that we need people to work on different domains for a bigger canvas, for if you are enthusiastic to learn and willing to work then you should join Darpan.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">How Darpan could help me in placements?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Darpan will provide you the best guidance and real world practice here you will be asking for sponsors managing events and creating different events. darpan will provide a large alumini network on which you can trust on. Here you will be learning different skills which will help you in your placements.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">How is the work environment of Darpan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  We will be asking you to complete you work beforer the deadlines but culture will help you achieve you goals in many ways you can ask you club mates to help you out if you are stuck somewhere. Overall you Will get a growing culture here.
                 </p>
               </div>
             </li>
