--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i>We are working for a cause.</li>
               <li><i class="ri-check-double-line"></i>We are shaping New India.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i>We are aspiring india.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
@@ -196,7 +196,7 @@
     <!-- End Counts Section -->
 
     <!-- ======= About Video Section ======= -->
-    <section id="about-video" class="about-video">
+    <!-- <section id="about-video" class="about-video">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -228,7 +228,8 @@
         </div>
 
       </div>
-    </section><!-- End About Video Section -->
+    </section> -->
+    <!-- End About Video Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
