--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                   <div class="testimonial-item">
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                      Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                      For the target group, the result is worth taking care of until the airline takes over. The accusers, however, need that, and need some discipline. Some faintness, but always a smile.
                       <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                     </p>
                     <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -998,7 +998,7 @@
                   <div class="testimonial-item">
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                      Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                      Export time, however, I was for the evils of the evils that I was going to be angry with the effort that I was going to be the one who was the one who was going to be the one who wanted to be.
                       <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                     </p>
                     <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -1011,7 +1011,7 @@
                   <div class="testimonial-item">
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                      Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                      For if I did not export a hair from your house, which are great, none of which I would bring to your house for a short time, I would have been my home, or I would have been the smallest.
                       <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                     </p>
                     <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -1024,7 +1024,7 @@
                   <div class="testimonial-item">
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                      Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                      For I was fleeing from the pain of pain, there is no fault in the export of many.
                       <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                     </p>
                     <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -1037,7 +1037,7 @@
                   <div class="testimonial-item">
                     <p>
                       <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                      Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                      Who are some of them whom I will read?
                       <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                     </p>
                     <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
@@ -1059,17 +1059,17 @@
 
         <div class="section-title">
           <h2>Gallary</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>We are not only indulged in promoting Hindi and having work all the time. Get introduced to some glimpses of our events, parties and hangout pictures.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
           <div class="col-lg-12 d-flex justify-content-center">
-            <!-- <ul id="portfolio-flters">
+            <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul> -->
+              <li data-filter=".filter-app">Events</li>
+              <li data-filter=".filter-card">Work pictures</li>
+              <li data-filter=".filter-web">Parties</li>
+            </ul>
           </div>
         </div>
 
@@ -1221,7 +1221,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Why Should I Join Darpan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Darpan Could help you in many aspects of life. we will provode you an healthy and constructive environment here. You will get the help from the senior members of Darpan.
+                  Darpan Could help you in many aspects of life. we will provide you a healthy and constructive environment here.
                 </p>
               </div>
             </li>
@@ -1239,7 +1239,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Why should a person, not interested in writing or poetry should join Darpan?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Here in Darpan we are promotion Hindi and for that we need people to work on different domains for a bigger canvas, for if you are enthusiastic to learn and willing to work then you should join Darpan.
+                  In Darpan we are promotion Hindi and for that we need people to work on different domains for a bigger canvas, for if you are enthusiastic to learn and willing to work then you should join Darpan.
                 </p>
               </div>
             </li>
@@ -1277,9 +1277,10 @@
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
-        <!-- <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-        </div> -->
+        <div>
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d35813.05652073043!2d87.28342587729455!3d23.560570343556655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1671098400078!5m2!1sen!2sin" style="border:0; width: 100%; height: 270px" allowfullscreen></iframe> -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29257.82016881516!2d87.28290664923573!3d23.560270674657104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdarpan%20NIT%20Durgapur!5e0!3m2!1sen!2sin!4v1671098873368!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
 
         <div class="row mt-5">
 
@@ -1447,3 +1448,7 @@
 </body>
 
 </html>
+
+
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d35813.05652073043!2d87.28342587729455!3d23.560570343556655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1671098400078!5m2!1sen!2sin" width="90%" height="450" style="border:0; width: 100%; height: 270px" allowfullscreen></iframe>
